tied vp js to vp table/need to fix card and hold alignment and add click sound

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,119 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.jumbotron {
-    background-color: transparent !important;
+body {
+    background: url("../images/signin-bg.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+p {
+    color: #fcba02;
+    font-family: 'Bangers', cursive;
+    font-size: 16px;
+}
+
+h1 {
+    color: #fcba02;
+    font-family: 'Bangers', cursive;
+    font-size: 16px;
+}
+
+#gameText {
+    color: #fcba02;
+    font-family: 'Bangers', cursive;
+    font-size: 16px;
+}
+
+/* Cards and Button Sizing */
+
+img {
+    width: 80px;
+    height: 100px;
+    display: block;
+    cursor: pointer;
+    float: left;
+}
+
+#btnsizing {
+    clear: both;
+    width: 80px;
+    height: 80px;
+}
+
+#pokerPay {
+    width: 70%;
+    height: 70%;
+}
+
+.playerChoiceButtons {
+    float: left;
+    display: block;
+    width: 110px !important;
+    border: solid 5px #fcba02;
+    font-family: 'Bangers', cursive;
+    color: #35001c;
+}
+
+.playerChoiceButtons,
+.playerChoiceButtons:hover {
+    margin: 10px 0;
+    padding: 5px;
+}
+
+.playerChoiceButtons:hover {
+    border: solid 5px #87201b;
+    cursor: pointer;
+    color: #ffe769;
+}
+
+ul {
+    clear: both;
+    list-style-type: none;
+}
+
+.holdButton {
+    float: left;
+    display: block;
+    width: 110px !important;
+    border: solid 5px #fcba02;
+    font-family: 'Bangers', cursive;
+    color: #35001c;
 }
 
 
-/*Button Border Hover Effect*/
-/****************************/
+.holdButton,
+.holdButton:hover {
+    display: block;
+    margin: 10px 0;
+    padding: 5px;
+}
+
+.holdButton:hover {
+    border: solid 5px #87201b;
+    cursor: pointer;
+    color: #ffe769;
+}
+
+.btn-transparent {
+    background: transparent;
+    color: #ffe769;
+    -webkit-transition: background .2s ease-in-out, border .2s ease-in-out;
+    -moz-transition: background .2s ease-in-out, border .2s ease-in-out;
+    -o-transition: background .2s ease-in-out, border .2s ease-in-out;
+    transition: background .2s ease-in-out, border .2s ease-in-out;
+    border: 2px solid #fcba02;
+}
+
+/* Button Border Hover Effect */
 
 .btnwidth {
     width: 110px !important;
-    border: solid 5px #fff;
+    border: solid 5px #fcba02;
+    font-family: 'Bangers', cursive;
+    color: #35001c;
 }
 
 .btnwidth,
@@ -23,12 +125,12 @@
 }
 
 .btnwidth:hover {
-    border: solid 5px #551a8b;
+    border: solid 5px #87201b;
     cursor: pointer;
+    color: #ffe769;
 }
 
 /*Button Floats Clear Unordered List Bullets*/
-/********************************************/
 
 li {
     float: left;
@@ -40,11 +142,212 @@ ul {
     list-style-type: none;
 }
 
-#title {
-    font-family: 'Bangers', cursive;
-    font-size: 40px;
-}
+/* Fonts */
 
 .panel-title {
     font-family: 'Bangers', cursive;
+    color: #fcba02;
+}
+
+/* Transparent Panel */
+
+.panel-transparent {
+    background: none;
+}
+
+.panel-transparent .panel-heading {
+    background: rgba(122, 130, 136, 0.2)!important;
+}
+
+.panel-transparent .panel-body {
+    background: rgba(46, 51, 56, 0.2)!important;
+}
+
+.panel-heading {
+    border: 0;
+}
+
+.panel {
+    margin: 0;
+}
+
+
+
+
+
+
+
+
+/* Wobble Vertical */
+
+@-webkit-keyframes hvr-wobble-vertical {
+    16.65% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+    }
+    33.3% {
+        -webkit-transform: translateY(-6px);
+        transform: translateY(-6px);
+    }
+    49.95% {
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+    }
+    66.6% {
+        -webkit-transform: translateY(-2px);
+        transform: translateY(-2px);
+    }
+    83.25% {
+        -webkit-transform: translateY(1px);
+        transform: translateY(1px);
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes hvr-wobble-vertical {
+    16.65% {
+        -webkit-transform: translateY(8px);
+        transform: translateY(8px);
+    }
+    33.3% {
+        -webkit-transform: translateY(-6px);
+        transform: translateY(-6px);
+    }
+    49.95% {
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+    }
+    66.6% {
+        -webkit-transform: translateY(-2px);
+        transform: translateY(-2px);
+    }
+    83.25% {
+        -webkit-transform: translateY(1px);
+        transform: translateY(1px);
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.hvr-wobble-vertical {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+}
+
+.hvr-wobble-vertical:hover,
+.hvr-wobble-vertical:focus,
+.hvr-wobble-vertical:active {
+    -webkit-animation-name: hvr-wobble-vertical;
+    animation-name: hvr-wobble-vertical;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+
+
+
+
+
+
+/* Icon Wobble Vertical */
+
+@-webkit-keyframes hvr-icon-wobble-vertical {
+    16.65% {
+        -webkit-transform: translateY(6px);
+        transform: translateY(6px);
+    }
+    33.3% {
+        -webkit-transform: translateY(-5px);
+        transform: translateY(-5px);
+    }
+    49.95% {
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+    }
+    66.6% {
+        -webkit-transform: translateY(-2px);
+        transform: translateY(-2px);
+    }
+    83.25% {
+        -webkit-transform: translateY(1px);
+        transform: translateY(1px);
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes hvr-icon-wobble-vertical {
+    16.65% {
+        -webkit-transform: translateY(6px);
+        transform: translateY(6px);
+    }
+    33.3% {
+        -webkit-transform: translateY(-5px);
+        transform: translateY(-5px);
+    }
+    49.95% {
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+    }
+    66.6% {
+        -webkit-transform: translateY(-2px);
+        transform: translateY(-2px);
+    }
+    83.25% {
+        -webkit-transform: translateY(1px);
+        transform: translateY(1px);
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.hvr-icon-wobble-vertical {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    position: relative;
+    padding-right: 2.2em;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.hvr-icon-wobble-vertical:before {
+    content: "\f062";
+    position: absolute;
+    right: 1em;
+    padding: 0 1px;
+    font-family: FontAwesome;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+}
+
+.hvr-icon-wobble-vertical:hover:before,
+.hvr-icon-wobble-vertical:focus:before,
+.hvr-icon-wobble-vertical:active:before {
+    -webkit-animation-name: hvr-icon-wobble-vertical;
+    animation-name: hvr-icon-wobble-vertical;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
 }
